[gd_scene load_steps=60 format=3 uid="uid://ctfvfhtlw28a7"]

[ext_resource type="Script" path="res://scenes/enemy_flyer.gd" id="1_s28ew"]
[ext_resource type="Texture2D" uid="uid://bfmd1soivmlg7" path="res://sprites/dead_fire_spr_0.png" id="2_7248k"]
[ext_resource type="Texture2D" uid="uid://cxc5th2r8hfpc" path="res://sprites/dead_fire_spr_1.png" id="3_h60m7"]
[ext_resource type="Texture2D" uid="uid://deqbcbnajy7k5" path="res://sprites/dead_fire_spr_2.png" id="4_gnqmw"]
[ext_resource type="Texture2D" uid="uid://clocsgl5uqp33" path="res://sprites/horu/images/enemy_wings_spr_0.png" id="5_vpvky"]
[ext_resource type="Texture2D" uid="uid://g8mwo0av6q68" path="res://sprites/horu/images/enemy_wings_berserk_spr_0.png" id="6_dspiy"]
[ext_resource type="Texture2D" uid="uid://b1verumjfmuv" path="res://sprites/horu/images/enemy_wings_berserk_spr_1.png" id="7_uu6fi"]
[ext_resource type="Texture2D" uid="uid://cneef8kbu6ayy" path="res://sprites/horu/images/enemy_wings_berserk_spr_2.png" id="8_pdpws"]
[ext_resource type="Texture2D" uid="uid://4nqratexjvl8" path="res://sprites/horu/images/enemy_wings_spr_1.png" id="9_116k6"]
[ext_resource type="Texture2D" uid="uid://xrkuecdbe5dq" path="res://sprites/horu/images/enemy_wings_spr_2.png" id="10_72fe8"]
[ext_resource type="Texture2D" uid="uid://cktra0qm32ecj" path="res://sprites/horu/images/enemy_wings_anger_0.png" id="11_kogms"]
[ext_resource type="Texture2D" uid="uid://cx1lbwd18v3lp" path="res://sprites/horu/images/enemy_wings_anger_1.png" id="12_bgo2v"]
[ext_resource type="Texture2D" uid="uid://c7cxf6jrkknts" path="res://sprites/horu/images/enemy_wings_anger_2.png" id="13_3pk1t"]
[ext_resource type="Texture2D" uid="uid://dko2fkqg1ojji" path="res://sprites/horu/images/nose1.png" id="18_acbc3"]
[ext_resource type="Texture2D" uid="uid://4oo3wlj34det" path="res://sprites/horu/images/nose2.png" id="19_1jw57"]
[ext_resource type="Texture2D" uid="uid://cwgrq0uuoaf5g" path="res://sprites/horu/images/nose3.png" id="20_ke2du"]
[ext_resource type="Texture2D" uid="uid://c1fa6mp1vngqq" path="res://sprites/horu/images/enemy_danger_spr_0.png" id="23_nd5yc"]
[ext_resource type="Script" path="res://scenes/enemy_jump.gd" id="24_l062u"]
[ext_resource type="Texture2D" uid="uid://q0bln7b1u2oh" path="res://sprites/horu/images/enemy_danger_spr_1.png" id="24_ppn4t"]
[ext_resource type="Script" path="res://scenes/ItemEnemy.gd" id="25_85cgq"]
[ext_resource type="Texture2D" uid="uid://1ybi7osvso8b" path="res://sprites/horu/images/enemy_danger_spr_2.png" id="25_dkssi"]
[ext_resource type="Texture2D" uid="uid://da61udeb1h6ll" path="res://sprites/horu/images/wing.png" id="26_d1tvy"]
[ext_resource type="Shader" path="res://scenes/Item.gdshader" id="26_rimhh"]
[ext_resource type="Texture2D" uid="uid://capc1hdlw0gpl" path="res://sprites/horu/images/stars1.png" id="26_ttym4"]
[ext_resource type="Texture2D" uid="uid://c6gf7vjf30biq" path="res://sprites/coin.png" id="27_isvs2"]
[ext_resource type="Texture2D" uid="uid://caxf4k5okg3cr" path="res://sprites/horu/images/stars2.png" id="27_t8wec"]
[ext_resource type="Texture2D" uid="uid://bpaljgkr5iu14" path="res://sprites/horu/images/stars3.png" id="28_6pow7"]
[ext_resource type="Texture2D" uid="uid://cog7sk80ykf4o" path="res://sprites/bomb.png" id="28_pldi6"]
[ext_resource type="Texture2D" uid="uid://bej4v4xthspa2" path="res://sprites/box.png" id="29_agbn0"]
[ext_resource type="Texture2D" uid="uid://bljcg74u2x5sd" path="res://sprites/invisibility.png" id="30_1i3sh"]
[ext_resource type="Texture2D" uid="uid://b3tca6epdaoix" path="res://sprites/rock.png" id="31_yv5y2"]
[ext_resource type="Texture2D" uid="uid://df545tsy68qs1" path="res://sprites/growing_plant.png" id="32_solao"]
[ext_resource type="Texture2D" uid="uid://pm7mhxqnqxtq" path="res://sprites/radar.png" id="33_ihofj"]
[ext_resource type="Texture2D" uid="uid://mpqlvpcht35a" path="res://sprites/simul_box.png" id="34_82pnr"]
[ext_resource type="Texture2D" uid="uid://trxeowv3jmbb" path="res://sprites/smoke_bomb.png" id="35_xe31o"]
[ext_resource type="Texture2D" uid="uid://csp0ardyjl54b" path="res://sprites/spring.png" id="36_mtvuj"]
[ext_resource type="Texture2D" uid="uid://c3wmt7870xukn" path="res://sprites/teleporter_box.png" id="37_gscne"]
[ext_resource type="Texture2D" uid="uid://cjg71ls267rbj" path="res://sprites/question_mark.png" id="38_0q6ur"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="39_55xwy"]
[ext_resource type="Texture2D" uid="uid://b3n7eech0mndx" path="res://sprites/arrows1.png" id="40_wml4y"]
[ext_resource type="Texture2D" uid="uid://dkompgmyj4pmk" path="res://sprites/arrows2.png" id="41_nccdp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_n414r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_d1tvy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_0vk2b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7248k")
}, {
"duration": 1.0,
"texture": ExtResource("3_h60m7")
}, {
"duration": 1.0,
"texture": ExtResource("4_gnqmw")
}],
"loop": true,
"name": &"dead_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vpvky")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_dspiy")
}, {
"duration": 1.0,
"texture": ExtResource("7_uu6fi")
}, {
"duration": 1.0,
"texture": ExtResource("8_pdpws")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vpvky")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vpvky")
}, {
"duration": 1.0,
"texture": ExtResource("9_116k6")
}, {
"duration": 1.0,
"texture": ExtResource("10_72fe8")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_efk2u"]
animations = [{
"frames": [],
"loop": true,
"name": &"dead_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_kogms")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_kogms")
}, {
"duration": 1.0,
"texture": ExtResource("12_bgo2v")
}, {
"duration": 1.0,
"texture": ExtResource("13_3pk1t")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_nd5yc")
}, {
"duration": 1.0,
"texture": ExtResource("24_ppn4t")
}, {
"duration": 1.0,
"texture": ExtResource("25_dkssi")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_kogms")
}, {
"duration": 1.0,
"texture": ExtResource("12_bgo2v")
}, {
"duration": 1.0,
"texture": ExtResource("13_3pk1t")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_wf5jr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_acbc3")
}, {
"duration": 1.0,
"texture": ExtResource("19_1jw57")
}, {
"duration": 1.0,
"texture": ExtResource("20_ke2du")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44h00"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yeio"]
radius = 15.7003

[sub_resource type="Animation" id="Animation_k8fva"]
resource_name = "killing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.5), Vector2(1.5, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5rsm"]
_data = {
"killing": SubResource("Animation_k8fva")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_4xq1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_ttym4")
}, {
"duration": 1.0,
"texture": ExtResource("27_t8wec")
}, {
"duration": 1.0,
"texture": ExtResource("28_6pow7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_8dsu1"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wing2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.82387, 0.0383972]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wing1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.309, 2.58309]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f8xkc"]
_data = {
"new_animation": SubResource("Animation_8dsu1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7qix"]
size = Vector2(18, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vy241"]
size = Vector2(30, 21)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mek1u"]
shader = ExtResource("26_rimhh")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 2.4
shader_parameter/shine_size = 0.01
shader_parameter/white = null

[sub_resource type="SpriteFrames" id="SpriteFrames_7vhq8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_isvs2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ncwxt"]
resource_local_to_scene = true
shader = ExtResource("26_rimhh")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 3.0
shader_parameter/shine_size = 0.01
shader_parameter/white = null

[sub_resource type="SpriteFrames" id="SpriteFrames_bmekl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_pldi6")
}],
"loop": true,
"name": &"bomb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_agbn0")
}],
"loop": true,
"name": &"clone",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_isvs2")
}],
"loop": true,
"name": &"coin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_1i3sh")
}],
"loop": true,
"name": &"invisibility",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_yv5y2")
}],
"loop": true,
"name": &"muffin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_solao")
}],
"loop": true,
"name": &"plant",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_ihofj")
}],
"loop": true,
"name": &"radar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_82pnr")
}],
"loop": true,
"name": &"simul",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_xe31o")
}],
"loop": true,
"name": &"smoke",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_mtvuj")
}],
"loop": true,
"name": &"spring",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_gscne")
}],
"loop": true,
"name": &"teleport",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_0q6ur")
}],
"loop": true,
"name": &"unknown",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_kuhnb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_wml4y")
}, {
"duration": 1.0,
"texture": ExtResource("41_nccdp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EnemyFlyer" type="CharacterBody2D"]
script = ExtResource("1_s28ew")

[node name="wing2" type="AnimatedSprite2D" parent="."]
position = Vector2(15, -3)
rotation = 1.82387
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_n414r")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0vk2b")
animation = &"stunned"
autoplay = "dead_fire"

[node name="eyes" type="AnimatedSprite2D" parent="sprite"]
sprite_frames = SubResource("SpriteFrames_efk2u")
animation = &"walking"
frame_progress = 0.316777

[node name="Nose" type="AnimatedSprite2D" parent="sprite"]
sprite_frames = SubResource("SpriteFrames_wf5jr")
frame_progress = 0.711453

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_44h00")

[node name="Area" type="Area2D" parent="."]
collision_layer = 33
collision_mask = 33

[node name="collider" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_6yeio")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b5rsm")
}
speed_scale = 2.0

[node name="stars_stunned" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_4xq1w")
autoplay = "default"
frame_progress = 0.742572

[node name="wing1" type="AnimatedSprite2D" parent="."]
position = Vector2(-15, -2)
rotation = 1.309
sprite_frames = SubResource("SpriteFrames_n414r")

[node name="AnimationWings" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f8xkc")
}
speed_scale = 5.0

[node name="enemy_jump" type="Area2D" parent="."]
script = ExtResource("24_l062u")

[node name="collider" type="CollisionShape2D" parent="enemy_jump"]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_a7qix")

[node name="Item" type="Area2D" parent="."]
visible = false
position = Vector2(1, 16)
script = ExtResource("25_85cgq")

[node name="collider" type="CollisionShape2D" parent="Item"]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_vy241")

[node name="sprite" type="AnimatedSprite2D" parent="Item"]
material = SubResource("ShaderMaterial_mek1u")
position = Vector2(-1, -48)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_7vhq8")

[node name="display" type="Node2D" parent="Item"]
visible = false
position = Vector2(0, -87)

[node name="back2" type="ColorRect" parent="Item/display"]
z_index = 4096
offset_left = -303.0
offset_top = -32.0
offset_right = 247.0
offset_bottom = 47.0
metadata/_edit_use_anchors_ = true

[node name="back" type="ColorRect" parent="Item/display"]
z_index = 4096
offset_left = -302.0
offset_top = -31.0
offset_right = 246.0
offset_bottom = 46.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="sprite" type="AnimatedSprite2D" parent="Item/display/back"]
material = SubResource("ShaderMaterial_ncwxt")
position = Vector2(45, 61)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_bmekl")
animation = &"invisibility"
offset = Vector2(0, -16)

[node name="lbl_item" type="Label" parent="Item/display/back"]
layout_mode = 0
offset_left = 84.0
offset_top = 2.0
offset_right = 508.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("39_55xwy")
text = "==CLONE==
Generates a copy of you. ddhydgasgdsagdsajd"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="arrows" type="AnimatedSprite2D" parent="Item/display/back"]
position = Vector2(520, 39)
sprite_frames = SubResource("SpriteFrames_kuhnb")
autoplay = "default"

[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_entered" from="Item" to="Item" method="_on_body_entered"]
[connection signal="body_exited" from="Item" to="Item" method="_on_body_exited"]
